# avh_example

./: .gitmodules  CMakeLists.txt  README.md  cmake_build.sh
src/: CMakeLists.txt  main.c
src/ethos_test/: retarget.c  uart.c
src/nn_test/: retarget.c  uart.c
